Perform some micro-optimizations for GeometryWindow rendering